--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo logo-container zoom-logo" ></a>
+    <a class="navbar-brand" href="#"><img src="images/logo.png" style="margin-left:25px;" class="logo logo-container zoom-logo" ></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
         <span class="navbar-toggler-icon"></span> 
     </button>
