--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <style>.logo-container {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
 }
 
 .zoom-logo {
-    width: 200%;
-    height: 200%;
+    width: 300%;
+    height: 300%;
     animation: zoomInOut 3s infinite ease-in-out;
 }
 
@@ -40,7 +40,7 @@
 <div>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#"><img src="images/logo.png" style="margin-left:25px;" class="logo logo-container zoom-logo" ></a>
+    <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo logo-container zoom-logo" ></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
         <span class="navbar-toggler-icon"></span> 
     </button>
