--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav"> <!––make sure you add this navbar-nav class––>
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.php">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
           <li class="nav-item"><a class="nav-link" href="#outlets">Outlets</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
