--- a/contact.html
+++ b/contact.html
@@ -3,46 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - SK 7 Star Ambur Biriyani</title>
+    <title>Contact Us - SK 7 Star Ambur Biriyani</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <style>.card{
-       border-radius: 5px;
-        border: 1px solid;
-        background:#c4261b;
-        color: #fff;}</style>
+    <style>
+/*
+        .card {
+            border-radius: 5px;
+            border: 1px solid;
+            background: #c4261b;
+            color: #fff;
+        }
+*/
+        .about-banner {
+            background-image: url('images/briyani.jpg');
+            margin-top: 0;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+        .banner-content {
+            margin-top: 150px;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-
-    <div>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo logo-container zoom-logo" ></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-        <span class="navbar-toggler-icon"></span> 
-    </button>
-    <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav"> <!––make sure you add this navbar-nav class––>
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="outlet.html">Outlets</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-    </div>
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo logo-container zoom-logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="outlet.html">Outlets</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <section class="about-banner" style="background-image:url('images/briyani.jpg'); margin-top:0;background-size: cover; /* Ensures the image covers the entire background */
-            background-position: center; /* Centers the image */
-            background-repeat: no-repeat; /* Prevents the image from repeating */
-            background-attachment: fixed; /* Keeps the background fixed while scrolling */"> 
+    <section class="about-banner">
         <div class="banner-overlay">
             <div class="container">
-                <div class="banner-content" style="margin-top:150px;">
+                <div class="banner-content text-center">
                     <h1 class="display-4">Contact Us</h1>
                     <p class="lead">We're Here to Help—Reach Out Anytime!</p>
                 </div>
@@ -50,10 +61,54 @@
         </div>
     </section>
 
-      <section></section>
-<footer class="py-4 bg-dark text-white">
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <!-- Contact Form -->
+                <div class="col-md-6">
+                    <h2 class="mb-4" style="color: #ad1c18;">Send Us a Message</h2>
+                    <form action="/submit-contact" method="POST" class="p-4 shadow-sm rounded" style="background-color: #f9f9f9;">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone Number</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Your Phone Number" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
+                        </div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn" style="background-color: #ad1c18; color: #ffffff;">Submit</button>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- Operating Hours -->
+                <div class="col-md-6">
+                    <h2 class="mb-4" style="color: #ad1c18;">Operating Hours</h2>
+                    <div class="card p-4">
+                        <ul class="list-unstyled">
+                            <li><strong>Monday - Friday:</strong> 10:00 AM - 10:00 PM</li>
+                            <li><strong>Saturday:</strong> 10:00 AM - 11:00 PM</li>
+                            <li><strong>Sunday:</strong> 11:00 AM - 10:00 PM</li>
+                            <li><strong>Holidays:</strong> 12:00 PM - 9:00 PM</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-4 bg-dark text-white">
         <div class="container text-center">
-            <p class="m-0">© <?php echo date('Y');?>&nbsp;&nbsp;Sk 7 Star Ambur Biriyani </p> 
+            <p class="m-0">© <?php echo date('Y');?>&nbsp;&nbsp;SK 7 Star Ambur Biriyani</p> 
             <div class="social-icons mt-3">
                 <a href="#" class="mx-2"><i class="fab fa-facebook-f fa-lg"></i></a>
                 <a href="#" class="mx-2"><i class="fab fa-twitter fa-lg"></i></a>
@@ -61,9 +116,10 @@
             </div>
         </div>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
-    </body>
+</body>
 </html>
