--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@ When you dine with us, you can trust that you're enjoying the very best—becaus
             </div>
         </div>
     </section>
-<footer class="py-4 bg-dark text-white">
+<!-- <footer class="py-4 bg-dark text-white">
         <div class="container text-center">
             <p class="m-0">© <?php echo date('Y');?>&nbsp;&nbsp;Sk 7 Star Ambur Biriyani </p> 
             <div class="social-icons mt-3">
@@ -88,6 +88,31 @@ When you dine with us, you can trust that you're enjoying the very best—becaus
                 <a href="#" class="mx-2"><i class="fab fa-twitter fa-lg"></i></a>
                 <a href="#" class="mx-2"><i class="fab fa-instagram fa-lg"></i></a>
             </div>
+        </div>
+    </footer> -->
+     <footer class="py-4 bg-dark text-white">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>Contact Us</h5>
+                    <p>Phone: +91-123-456-7890</p>
+                    <p>Email: info@sk7starbiriyani.com</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Address</h5>
+                    <p>123 Ambur Road, Near ABC Plaza, Chennai, Tamil Nadu, India</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Follow Us</h5>
+                    <div class="social-icons mt-3">
+                        <a href="#" class="mx-2"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="#" class="mx-2"><i class="fab fa-instagram fa-lg"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="bg-white">
+            <p class="m-0">© <?php echo date('Y');?> SK 7 Star Ambur Biriyani. All Rights Reserved.</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
