--- a/outlet.html
+++ b/outlet.html
@@ -55,15 +55,16 @@
     <div class="row" style="display:flex;">
         <!-- Example of a shop card -->
         <div class="col-md-4">
-            <div class="card">
-                <div class="card-body" style="text-align:center;">
-                    <img src="images/Mugapair.jpeg">
-                    <h5 class="card-title">Shop Name 1</h5>
-                    <p class="card-text">Chennai</p>
-                    <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
-                </div>
-            </div>
-        </div><br><br>
+    <div class="card">
+        <img src="images/Mugapair.jpg" class="card-img-top" alt="Shop Image">
+        <div class="card-body" style="text-align:center;">
+            <h5 class="card-title">Shop Name 1</h5>
+            <p class="card-text">Chennai</p>
+            <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+        </div>
+    </div>
+</div>
+<br><br>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body" style="text-align:center;">
