--- a/outlet.html
+++ b/outlet.html
@@ -57,7 +57,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
-        <img src="images/Mugapair.jpg"  alt="Shop Image">
+        <img src="images/Mugapair.jpeg"  alt="Shop Image">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Chennai</p>
