--- a/outlet.html
+++ b/outlet.html
@@ -61,7 +61,7 @@
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Chennai</p>
-            <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+            <a href="https://maps.app.goo.gl/ckRRccDwy7C874X38" class="btn btn-primary" target="_blank">Get Directions</a>
         </div>
     </div>
 </div>
