--- a/outlet.html
+++ b/outlet.html
@@ -60,7 +60,7 @@
         <img src="https://github.com/mgowtham91/sk7staramburbiriyani/blob/main/images/Mugapair.jpeg" class="card-img-top"  alt="Shop Image"  alt="Shop Image">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
-            <p class="card-text">Chennai</p>
+            <p class="card-text">Mogappair</p>
             <a href="https://maps.app.goo.gl/ckRRccDwy7C874X38" class="btn btn-primary" target="_blank">Get Directions</a>
         </div>
     </div>
@@ -70,8 +70,8 @@
             <div class="card">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Trichy</p>
-                    <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+                    <p class="card-text">Poonamalle</p>
+                    <a href="https://maps.app.goo.gl/76t5PVPLKuT5acGV9" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
         </div><br><br>
@@ -79,7 +79,7 @@
             <div class="card">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Tanjore</p>
+                    <p class="card-text">Thiruvallur</p>
                     <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="card">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 1</h5>
-                    <p class="card-text">Thiruvallur</p>
+                    <p class="card-text">Vellore</p>
                     <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -101,8 +101,8 @@
             <div class="card">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Potheri</p>
-                    <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+                    <p class="card-text">Ambur</p>
+                    <a href="https://maps.app.goo.gl/ARJ1pYyhM7rSJJ8v8" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
         </div><br><br>
@@ -110,8 +110,8 @@
             <div class="card">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Vellore</p>
-                    <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+                    <p class="card-text">Trichy</p>
+                    <a href="https://maps.app.goo.gl/Q7qywqs5qo6JeUou9" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
         </div><br><br>
