--- a/outlet.html
+++ b/outlet.html
@@ -116,6 +116,39 @@
             </div>
         </div><br><br>
         <!-- Repeat similar card structure for other shops -->
+            <div class="row" style="display:flex;">
+        <!-- Example of a shop card -->
+        <div class="col-md-4">
+    <div class="card">
+        <img src="https://github.com/mgowtham91/sk7staramburbiriyani/blob/main/images/Mugapair.jpeg" class="card-img-top"  alt="Shop Image"  alt="Shop Image">
+        <div class="card-body" style="text-align:center;">
+            <h5 class="card-title">Shop Name 1</h5>
+            <p class="card-text">Mogappair</p>
+            <a href="https://maps.app.goo.gl/ckRRccDwy7C874X38" class="btn btn-primary" target="_blank">Get Directions</a>
+        </div>
+    </div>
+</div>
+<br><br>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body" style="text-align:center;">
+                    <h5 class="card-title">Shop Name 2</h5>
+                    <p class="card-text">Poonamalle</p>
+                    <a href="https://maps.app.goo.gl/76t5PVPLKuT5acGV9" class="btn btn-primary" target="_blank">Get Directions</a>
+                </div>
+            </div>
+        </div><br><br>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body" style="text-align:center;">
+                    <h5 class="card-title">Shop Name 2</h5>
+                    <p class="card-text">Thiruvallur</p>
+                    <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+                </div>
+            </div>
+        </div><br><br>
+        <!-- Repeat similar card structure for other shops -->
+    </div>
     </div>
         
 </div>
