--- a/outlet.html
+++ b/outlet.html
@@ -117,6 +117,37 @@
         </div><br><br>
         <!-- Repeat similar card structure for other shops -->
     </div>
+        <br><br><div class="row">
+        <!-- Example of a shop card -->
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body" style="text-align:center;">
+                    <h5 class="card-title">Shop Name 1</h5>
+                    <p class="card-text">Vellore</p>
+                    <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
+                </div>
+            </div>
+        </div><br><br>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body" style="text-align:center;">
+                    <h5 class="card-title">Shop Name 2</h5>
+                    <p class="card-text">Ambur</p>
+                    <a href="https://maps.app.goo.gl/ARJ1pYyhM7rSJJ8v8" class="btn btn-primary" target="_blank">Get Directions</a>
+                </div>
+            </div>
+        </div><br><br>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body" style="text-align:center;">
+                    <h5 class="card-title">Shop Name 2</h5>
+                    <p class="card-text">Trichy</p>
+                    <a href="https://maps.app.goo.gl/Q7qywqs5qo6JeUou9" class="btn btn-primary" target="_blank">Get Directions</a>
+                </div>
+            </div>
+        </div><br><br>
+        <!-- Repeat similar card structure for other shops -->
+    </div>
     </div>
         
 </div>
