--- a/outlet.html
+++ b/outlet.html
@@ -57,7 +57,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
-        <img src="https://github.com/mgowtham91/sk7staramburbiriyani/blob/main/images/Mugapair.jpeg"   alt="Shop Image">
+        <img src="https://github.com/mgowtham91/sk7staramburbiriyani/blob/main/images/Mugapair.jpeg" class="card-img-top" alt="Shop Image">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Mogappair</p>
