--- a/outlet.html
+++ b/outlet.html
@@ -11,7 +11,7 @@
     <style>.card{
        border-radius: 5px;
         border: 1px solid;
-        background:#c4261b;
+/*         background:#c4261b; */
         color: #fff;}
     </style>
 </head>
@@ -57,7 +57,6 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
-        <img src="https://github.com/mgowtham91/sk7staramburbiriyani/blob/main/images/Mugapair.jpeg" class="card-img-top" alt="Shop Image">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Mogappair</p>
