--- a/outlet.html
+++ b/outlet.html
@@ -11,7 +11,7 @@
     <style>.card{
        border-radius: 5px;
         border: 1px solid;
-/*         background:#c4261b; */
+        background:#c4261b;
         color: #fff;}
     </style>
 </head>
