--- a/outlet.html
+++ b/outlet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Flavors of Joy</title>
+    <title>Outlet - Flavors of Joy</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -13,6 +13,13 @@
         border: 1px solid;
         background:#c4261b;
         color: #fff;}
+        
+.card-img-top {
+    height: 200px; /* Adjust height as needed */
+    object-fit: cover; /* Ensure the image fits nicely */
+    border-top-left-radius: 5px; /* Match card border radius */
+    border-top-right-radius: 5px; /* Match card border radius */
+}
     </style>
 </head>
 <body>
@@ -57,6 +64,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
+         <img src="images/shop1.jpg" class="card-img-top" alt="Shop Name 1">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Mogappair</p>
