--- a/outlet.html
+++ b/outlet.html
@@ -64,7 +64,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
-         <img src="images/shop1.jpg" class="card-img-top" alt="Shop Name 1">
+         <img src="images/Mugapair.jpg" class="card-img-top" alt="Shop Name 1">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Mogappair</p>
