--- a/outlet.html
+++ b/outlet.html
@@ -64,7 +64,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
     <div class="card">
-         <img src="images/Mugapair.jpeg" class="card-img-top" alt="Shop Name 1">
+         <img src="images/Mugapair.jpeg" class="card-img-top" alt="MugapairShop">
         <div class="card-body" style="text-align:center;">
             <h5 class="card-title">Shop Name 1</h5>
             <p class="card-text">Mogappair</p>
@@ -75,6 +75,7 @@
 <br><br>
         <div class="col-md-4">
             <div class="card">
+                <img src="images/poonamalle.jpeg" class="card-img-top" alt="poonamalle shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
                     <p class="card-text">Poonamalle</p>
@@ -84,6 +85,7 @@
         </div><br><br>
         <div class="col-md-4">
             <div class="card">
+                <img src="images/thiruvallur.jpeg" class="card-img-top" alt="Thiruvallur shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
                     <p class="card-text">Thiruvallur</p>
@@ -97,6 +99,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
             <div class="card">
+                <img src="images/vellore.jpeg" class="card-img-top" alt="Vellore shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 1</h5>
                     <p class="card-text">Vellore</p>
@@ -106,6 +109,7 @@
         </div><br><br>
         <div class="col-md-4">
             <div class="card">
+                <img src="images/ambur.jpeg" class="card-img-top" alt="Ambur shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
                     <p class="card-text">Ambur</p>
@@ -115,6 +119,7 @@
         </div><br><br>
         <div class="col-md-4">
             <div class="card">
+                <img src="images/trichy.jpeg" class="card-img-top" alt="Trichy shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
                     <p class="card-text">Trichy</p>
@@ -128,6 +133,7 @@
         <!-- Example of a shop card -->
         <div class="col-md-4">
             <div class="card">
+                <img src="images/potheri.jpeg" class="card-img-top" alt="Potheri shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 1</h5>
                     <p class="card-text">Potheri</p>
@@ -137,6 +143,7 @@
         </div><br><br>
         <div class="col-md-4">
             <div class="card">
+                <img src="images/vaniyambadi.jpeg" class="card-img-top" alt="Vaniayambadi shop">
                 <div class="card-body" style="text-align:center;">
                     <h5 class="card-title">Shop Name 2</h5>
                     <p class="card-text">Vaniayambadi</p>
