--- a/outlet.html
+++ b/outlet.html
@@ -70,8 +70,8 @@
     <div class="card">
          <img src="images/Mugapair.jpeg" class="card-img-top" alt="MugapairShop">
         <div class="card-body" style="text-align:center;">
-            <h5 class="card-title">Shop Name 1</h5>
-            <p class="card-text">Mogappair</p>
+            <h5 class="card-title">Mogappair</h5>
+<!--             <p class="card-text">Mogappair</p> -->
             <a href="https://maps.app.goo.gl/ckRRccDwy7C874X38" class="btn btn-primary" target="_blank">Get Directions</a>
         </div>
     </div>
@@ -81,8 +81,8 @@
             <div class="card">
                 <img src="images/poonamalle.jpeg" class="card-img-top" alt="poonamalle shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Poonamalle</p>
+                    <h5 class="card-title">Poonamalle</h5>
+<!--                     <p class="card-text">Poonamalle</p> -->
                     <a href="https://maps.app.goo.gl/76t5PVPLKuT5acGV9" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -91,8 +91,8 @@
             <div class="card">
                 <img src="images/thiruvallur.jpeg" class="card-img-top" alt="Thiruvallur shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Thiruvallur</p>
+                    <h5 class="card-title">Thiruvallur</h5>
+<!--                     <p class="card-text">Thiruvallur</p> -->
                     <a href="https://www.google.com/maps?q=456+Market+Road,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -105,8 +105,8 @@
             <div class="card">
                 <img src="images/vellore.jpeg" class="card-img-top" alt="Vellore shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 1</h5>
-                    <p class="card-text">Vellore</p>
+                    <h5 class="card-title">Vellore</h5>
+<!--                     <p class="card-text">Vellore</p> -->
                     <a href="https://www.google.com/maps?q=123+Main+Street,City,State" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -115,8 +115,8 @@
             <div class="card">
                 <img src="images/ambur.jpeg" class="card-img-top" alt="Ambur shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Ambur</p>
+                    <h5 class="card-title">Ambur</h5>
+<!--                     <p class="card-text">Ambur</p> -->
                     <a href="https://maps.app.goo.gl/ARJ1pYyhM7rSJJ8v8" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -125,8 +125,8 @@
             <div class="card">
                 <img src="images/trichy.jpeg" class="card-img-top" alt="Trichy shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Trichy</p>
+                    <h5 class="card-title">Trichy</h5>
+<!--                     <p class="card-text">Trichy</p> -->
                     <a href="https://maps.app.goo.gl/Q7qywqs5qo6JeUou9" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -139,8 +139,8 @@
             <div class="card">
                 <img src="images/potheri.jpeg" class="card-img-top" alt="Potheri shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 1</h5>
-                    <p class="card-text">Potheri</p>
+                    <h5 class="card-title">Potheri</h5>
+<!--                     <p class="card-text">Potheri</p> -->
                     <a href="https://maps.app.goo.gl/weaBWX1axkxDQ3eF8" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
@@ -149,8 +149,8 @@
             <div class="card">
                 <img src="images/vaniyambadi.jpeg" class="card-img-top" alt="Vaniayambadi shop">
                 <div class="card-body" style="text-align:center;">
-                    <h5 class="card-title">Shop Name 2</h5>
-                    <p class="card-text">Vaniayambadi</p>
+                    <h5 class="card-title">Vaniayambadi</h5>
+<!--                     <p class="card-text">Vaniayambadi</p> -->
                     <a href="https://maps.app.goo.gl/ARJ1pYyhM7rSJJ8v8" class="btn btn-primary" target="_blank">Get Directions</a>
                 </div>
             </div>
