--- a/outlet.html
+++ b/outlet.html
@@ -12,18 +12,18 @@
        border-radius: 5px;
         border: 1px solid;
         background:#c4261b;
-        color: #fff;}
+        color: #blue;}
         
 .card-img-top {
     height: 200px; /* Adjust height as needed */
     object-fit: cover; /* Ensure the image fits nicely */
     border-top-left-radius: 5px; /* Match card border radius */
     border-top-right-radius: 5px; /* Match card border radius */
-    transition: transform 0.3s ease-in-out; /* Smooth zoom effect */
+/*     transition: transform 0.3s ease-in-out; /* Smooth zoom effect */ */
 }
-        .card:hover .card-img-top {
+/*         .card:hover .card-img-top {
     transform: scale(1.1); /* Zoom in the image */
-}
+} */
     </style>
 </head>
 <body>
