--- a/outlet.html
+++ b/outlet.html
@@ -11,8 +11,8 @@
     <style>.card{
        border-radius: 5px;
         border: 1px solid;
-        background:#c4261b;
-        color: #blue;}
+        background:blue;
+        color: #fff;}
         
 .card-img-top {
     height: 200px; /* Adjust height as needed */
