--- a/outlet.html
+++ b/outlet.html
@@ -11,8 +11,8 @@
     <style>.card{
        border-radius: 5px;
         border: 1px solid;
-        background:blue;
-        color: #fff;}
+        background:#f8f9fa;
+        color: #333;}
         
 .card-img-top {
     height: 200px; /* Adjust height as needed */
