--- a/outlet.html
+++ b/outlet.html
@@ -11,7 +11,7 @@
     <style>.card{
        border-radius: 5px;
         border: 1px solid;
-        background:#f8f9fa;
+        background:#f0e68c;
         color: #333;}
         
 .card-img-top {
