--- a/outlet.html
+++ b/outlet.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-     <section><br><br><br>
+     <section style="background-image:url('images/art1.png')"><br><br><br>
     <div><div class="container">
     <div class="row" style="display:flex;">
         <!-- Example of a shop card -->
