--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     overflow: hidden;
 }
 
-.zoom-logo {
+/* .zoom-logo {
     width: 300%;
     height: 300%;
     animation: zoomInOut 3s infinite ease-in-out;
@@ -33,7 +33,7 @@
     100% {
         transform: scale(1);
     }
-}
+} */
 </style>
 </head>
 <body>
