--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <style>.logo-container {
+<!--     <style>.logo-container {
     width: 200px;
     height: 200px;
     overflow: hidden;
-}
+} -->
 
 /* .zoom-logo {
     width: 300%;
