logo update index.html

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <style>.logo-container {
+<!--     <style>.logo-container {
     width: 200px;
     height: 200px;
     overflow: hidden;
 }
-
-.zoom-logo {
+ -->
+/* .zoom-logo {
     width: 300%;
     height: 300%;
     animation: zoomInOut 3s infinite ease-in-out;
-}
+} */
 
-@keyframes zoomInOut {
+/* @keyframes zoomInOut {
     0% {
         transform: scale(1);
     }
@@ -33,7 +33,7 @@
     100% {
         transform: scale(1);
     }
-}
+} */
 </style>
 </head>
 <body>
